gitops/apps/demo-onprem/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: demo-onprem
  annotations:
    argocd.argoproj.io/sync-wave: "-3"
  labels:
    app.kubernetes.io/name: demo-onprem
    app.kubernetes.io/part-of: platform-gitops
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: latest
